# ngs

./: ALGORITHM_ANALYSIS_REPORT.md  BREAKTHROUGH_REPORT.md  FINAL_REPORT.md  README.md  REPORT_NGS_FINAL.md  RESEARCH.md  RESULTS_SUMMARY.md  TODO.md  TODO10.md  TODO11.md  TODO12.md  TODO13.md  TODO2.md  TODO3.md  TODO4.md  TODO5.md  TODO6.md  TODO7.md  TODO8.md  TODO9.md  VALIDATION_REPORT.md  dashboard.sh  lean_ngs.py  patch_changes.py  patch_lsr.py  profile_training.py  pyproject.toml  quick_summary.py  requirements.txt  run_continuous_discovery.sh  run_experiments.sh  smoke_TODO12.py  test_dashboard.py  train_split_mnist.py  validate.sh  validate_fast.py
configs/cl/: split_cifar100_ngs_large_hyper.yaml  split_cifar10_hierarchical.yaml  split_mnist_ngs_attention.yaml  split_mnist_ngs_baseline.yaml  split_mnist_ngs_factorized.yaml  split_mnist_ngs_hyper.yaml  split_mnist_ngs_ultra.yaml
configs/sweeps/: baseline_split_mnist_sweep_000.yaml  baseline_split_mnist_sweep_001.yaml  baseline_split_mnist_sweep_002.yaml  baseline_split_mnist_sweep_003.yaml  (+77 more)
docs/: architecture.rst  conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst
examples/: demo_rl_visual.py  profile_performance.py  train_cl.py  train_density.py  train_fewshot.py  train_rl.py  visualize_dynamics.py
experiments/: ablate_projections.py  ablation.py  analyze_gaussian_specialization.py  analyze_ngs_robustness.py  backbones.py  baseline_moe.py  baselines.py  cartpole_shifts.py  compare_ngs_vs_dense.py  comprehensive_eval.py  compression_mnist.py  config.py  datasets.py  datasets_tinyshakespeare.py  datasets_uea.py  diagnose_3dgs_hardness.py  diagnose_energy_landscape.py  diagnose_entropy_distribution.py  diagnose_ep_vs_bp_updates.py  diagnose_gaussian_overlap.py  diagnose_spectral_norm.py  download_uea.py  eqprop_ablation.py  eqprop_continual.py  eqprop_mse_energy.py  eqprop_via_epoptimizer.py  fast_data.py  free_energy_manager.py  hpo.py  lean_ngs_trainer.py  load_3dgs.py  main.py  maml_trainer.py  maml_trainer_cnn.py  metrics.py  mngs_trainer.py  ngs_layer_ablations.py  ngs_layer_runner.py  ngs_trainer.py  omniglot_backbone.py  (+76 more)
mngs/: __init__.py  model.py  profiles.py
ngs/: __init__.py
papers/: autopoietic_splatting_neurips.md  class_incremental_icml.md  eqngs_neurips.md  federated_router_icml.md  meta_gaussian_priors_neurips.md  native_3d_iclr.md  photonic_icml.md  sparse_routing_neurips.md  transformer_ffn_iclr.md
prototype1/: .gitignore  test_lean_ngs.py
scripts/: aggregate_results.py  bayesian_optimizer.py  breakthrough_orchestrator.py  callbacks.py  checkpoint_runner.py  continuous_discovery.py  continuous_queue.py  experiment_config.py  generate_paper_figures.py  generate_radar_chart.py  insights.py  reproduce.py  results_db.py  run_all_benchmarks.py  run_cifar10_head_experiment.py  run_experiment.py  run_extended_benchmark.py  run_matrix.py  sweep.py  sweep_orchestrator.py  validation_suite.py
tests/: __init__.py  conftest.py  test_baseline_profile.py  test_cfg_net_profile.py  test_continual.py  test_determinism.py  test_end_to_end.py  test_import.py  test_memory.py  test_model.py  test_ngs_integration.py  test_parameter_stores.py  test_routers.py  test_topology.py  test_topology_and_training.py  test_trainer.py
(+88 files in other folders)
